--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,9 @@ doc/
 .project
 .DS_Store
 .idea
-config/application.yml
-config/database.yml
+
+# Ignore the database configuration
+/config/database.yml
+
+# Ignore application configuration
+/config/application.yml
