--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,8 @@ rvm:
   - 1.9.3
   - 2.0.0
   - ruby-head
+before_script:
+  - cp config/database.example.yml config/database.yml
+  - cp config/application.example.yml config/application.yml
+  - rake db:migrate
+bundler_args: --without development
