--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: ruby
 rvm:
-  - 1.9.3
-  - 2.0.0
-  - ruby-head
+- 1.9.3
+- 2.0.0
+- ruby-head
 before_script:
-  - cp config/database.example.yml config/database.yml
-  - cp config/application.example.yml config/application.yml
-  - rake db:migrate
-bundler_args: --without development
+- cp config/database.example.yml config/database.yml
+- cp config/application.example.yml config/application.yml
+- rake db:migrate
+bundler_args: "--without development"
+notifications:
+  slack:
+    secure: SlrwycqUV9Nyj+cUG885iwxm3cJrQa2wFSquwHZiB9YBsLQXJfVF532EN0lf9pdo1fdT6VUN2euGKoG+1MH+OL1r4WIDVRFHU37qwEM96eokR3jqaMO0MqLb5Q/66k2IHXPepGSkcJ3VNx0CFkMoUMXlD00wDlQX2LuKb1Vcckk=
